force-app/main/default/objects/MUSW__Fee_Payment__c/MUSW__Fee_Payment__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Allocated Receipt amounts paying Fees</description>
    <label>Fee Payment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>