force-app/main/default/objects/MUSW__Fee_Payment__c/fields/BGBK__Invoice__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>BGBK__Bill__c</referenceTo>
    <relationshipLabel>Fee Payments</relationshipLabel>
    <relationshipName>Fee_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>