force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Fee__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee</label>
    <referenceTo>MUSW__Fee__c</referenceTo>
    <relationshipLabel>Applied Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>