force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Paid_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>