force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>