force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Receipt__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>MUSW__Receipt__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>