force-app/main/default/objects/MUSW__Fee_Payment__c/fields/MUSW__Receipt_Amount_Tendered__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt_Amount_Tendered__c</fullName>
    <label>Receipt Amount Tendered</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>